# SHA

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
sha/: SHA256.cpp  SHA256.h  SHA384.cpp  SHA384.h  SHA512.cpp  SHA512.h
